--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ fieldset {
     margin-left: 8px;
 }
 .card {
-    background-image: url("images/background.png");
+    /*background-image: url("images/background.png");*/
     background-size: 80%;
     background-position:center;
     background-repeat: no-repeat;
